<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.biomt.auth.authapp.AuthActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_text_identity"
        android:id="@+id/identityLabel"
        android:layout_marginTop="165dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_text_password"
        android:id="@+id/passwordLabel"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/auth_passwordText"
        android:hint="@string/hint_password"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/auth_identityText"
        android:hint="@string/hint_identity"
        android:layout_alignLeft="@+id/auth_passwordText"
        android:layout_alignStart="@+id/auth_passwordText"
        android:layout_alignBottom="@+id/identityLabel"
        android:layout_alignRight="@+id/auth_passwordText"
        android:layout_alignEnd="@+id/auth_passwordText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text_auth"
        android:id="@+id/auth_button"
        android:layout_below="@+id/auth_passwordText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:onClick="onAuthButtonClicked"/>
</RelativeLayout>
