<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.biomt.auth.authapp.EnrollmentActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_text_identity"
        android:id="@+id/textViewIdentity"
        android:layout_marginTop="34dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enroll_editTextIdentity"
        android:hint="@string/hint_identity"
        android:layout_alignBottom="@+id/textViewIdentity"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textViewIdentity"
        android:layout_toEndOf="@+id/textViewIdentity" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/enroll_editTextPassword"
        android:hint="@string/hint_password"
        android:layout_alignBottom="@+id/textViewPassword"
        android:layout_alignLeft="@+id/enroll_editTextIdentity"
        android:layout_alignStart="@+id/enroll_editTextIdentity"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enroll_editTextFrom"
        android:layout_below="@+id/textViewPassword"
        android:layout_alignLeft="@+id/enroll_editTextPassword"
        android:layout_alignStart="@+id/enroll_editTextPassword"
        android:layout_marginTop="29dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enroll_editTextTo"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/enroll_editTextFrom"
        android:layout_alignLeft="@+id/enroll_editTextFrom"
        android:layout_alignStart="@+id/enroll_editTextFrom"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enroll_editTextIDPURL"
        android:layout_below="@+id/enroll_editTextTo"
        android:layout_alignLeft="@+id/enroll_editTextTo"
        android:layout_alignStart="@+id/enroll_editTextTo"
        android:layout_marginTop="35dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_text_password"
        android:id="@+id/textViewPassword"
        android:layout_below="@+id/textViewIdentity"
        android:layout_marginTop="39dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_text_from"
        android:id="@+id/textViewFrom"
        android:layout_alignBottom="@+id/enroll_editTextFrom"
        android:layout_alignLeft="@+id/textViewPassword"
        android:layout_alignStart="@+id/textViewPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_text_to"
        android:id="@+id/textViewTo"
        android:layout_alignBottom="@+id/enroll_editTextTo"
        android:layout_alignLeft="@+id/textViewFrom"
        android:layout_alignStart="@+id/textViewFrom" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_text_idp_url"
        android:id="@+id/textViewIDPURL"
        android:layout_alignBottom="@+id/enroll_editTextIDPURL"
        android:layout_alignLeft="@+id/textViewTo"
        android:layout_alignStart="@+id/textViewTo" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text_enroll"
        android:id="@+id/enroll_button"
        android:layout_below="@+id/textViewIDPURL"
        android:layout_alignLeft="@+id/textViewIdentity"
        android:layout_alignStart="@+id/textViewIdentity"
        android:layout_marginTop="31dp"
        android:onClick="onEnrollButtonClicked"/>
</RelativeLayout>
