...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_button_name"
        android:id="@+id/auth_button"
        android:onClick="onAuthButtonClicked"
        android:layout_marginTop="47dp"
        android:layout_below="@+id/editTextUserName"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_name_SP_URL"
...
